# brain-dump

./: .gitignore  README.md  SETUP.md  brain-dump-spec.md  package-lock.json
brain-dump/: index.html  package-lock.json  package.json
brain-dump/src/: main.ts  overlay.html  style.css
brain-dump/src-tauri/: Cargo.toml  tauri.conf.json
brain-dump/src-tauri/src/: context.rs  lib.rs  main.rs  quota.rs  recorder.rs  settings.rs  supabase.rs  transcribe_groq.rs
